enable systemd explicitly + retry reboot + spelling

--- a/playbooks/roles/info_common/tasks/uname.yaml
+++ b/playbooks/roles/info_common/tasks/uname.yaml
@@ -1,8 +1,11 @@
 ---
-- name: Gather facts - current running kernel
+- name: Gather facts
   ansible.builtin.setup:
     gather_subset:
+      - distribution
       - hardware
+      - kernel
+      - processor
 
 - name: File uname
   delegate_to: localhost
