--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -9,40 +9,47 @@
   ansible.builtin.systemd_service:
     name: systemd-journald
     state: restarted
+    enabled: true
 
 - name: Reload ssh
   listen: Reload ssh
   ansible.builtin.systemd_service:
     name: ssh
     state: reloaded
+    enabled: true
 
 - name: Restart nginx
   listen: Restart nginx
   ansible.builtin.systemd_service:
     name: nginx
     state: restarted
+    enabled: true
 
 - name: Reload nginx
   listen: Reload nginx
   ansible.builtin.systemd_service:
     name: nginx
     state: reloaded
+    enabled: true
 
 - name: Restart Prometheus node exporter
   listen: Restart Prometheus node exporter
   ansible.builtin.systemd_service:
     name: prometheus-node-exporter
     state: restarted
+    enabled: true
 
 - name: Reboot system
   listen: Reboot system
+  retries: 1
   ansible.builtin.reboot:
     reboot_timeout: 180
     post_reboot_delay: 30
     test_command: "iptables -nvL"
 
-- name: Gather new kernel version after common reboot
+- name: Gather facts (after common reboot)
   listen: Reboot system
   ansible.builtin.setup:
     gather_subset:
       - hardware
+      - kernel
