--- a/playbooks/roles/setup_common/tasks/node-exporter.yaml
+++ b/playbooks/roles/setup_common/tasks/node-exporter.yaml
@@ -19,3 +19,5 @@
 - name: Enable Prometheus node exporter
   ansible.builtin.systemd_service:
     name: prometheus-node-exporter
+    state: started
+    enabled: true
