--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -122,6 +122,7 @@
   ansible.builtin.systemd_service:
     name: sysstat
     state: started
+    enabled: true
 
 - name: Stop and disable services
   when: ansible_facts.os_family == 'Debian'
