tor: use latest Gentoo configures

--- a/playbooks/roles/setup_tor/tasks/tor-src.yaml
+++ b/playbooks/roles/setup_tor/tasks/tor-src.yaml
@@ -40,10 +40,11 @@
         --prefix=/usr \
         --mandir=/usr/share/man --infodir=/usr/share/info --datadir=/usr/share --sysconfdir=/etc \
         --localstatedir=/var --datarootdir=/usr/share \
-        --disable-systemd --disable-asciidoc --disable-html-manual --disable-unittests \
-        --enable-module-relay --disable-module-dirauth \
-        --enable-pic --enable-gcc-hardening --enable-linker-hardening --disable-all-bugs-are-fatal --enable-seccomp \
-        --disable-zstd
+        --disable-dependency-tracking --disable-silent-rules --disable-all-bugs-are-fatal --enable-system-torrc \
+        --disable-android --disable-coverage --disable-html-manual --disable-libfuzzer --enable-missing-doc-warnings \
+        --disable-module-dirauth --enable-pic --disable-restart-debugging --enable-gpl --enable-module-pow \
+        --enable-gcc-hardening --enable-linker-hardening --enable-asciidoc --enable-manpage --enable-lzma \
+        --enable-libscrypt --enable-seccomp --enable-module-relay --disable-systemd --disable-unittests --disable-zstd
       make clean
       CFLAGS="-O2 -pipe -march=native -ftrivial-auto-var-init=zero -g -ggdb" make -j$(nproc)
     chdir: /root/tor
