--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -179,7 +179,7 @@
       changed_when: true
       ansible.builtin.debug:
         msg: Reboot was triggered manually.
-      notify: Reboot system
+      notify: Reboot
       tags:
         - never
         - reboot
