--- a/playbooks/roles/info_tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info_tor/tasks/onionoo.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Query Onionoo
-  throttle: 16
+  throttle: "{{ concurrent_local_jobs }}"
   ansible.builtin.uri:
     url: "https://onionoo.torproject.org/details?search={{ _fingerprint_hashed }}"
     return_content: true
