--- a/playbooks/roles/info_common/tasks/conntrack.yaml
+++ b/playbooks/roles/info_common/tasks/conntrack.yaml
@@ -4,6 +4,7 @@
   ansible.builtin.shell:
     cmd: |-
       conntrack -S |
+        head -n $(nproc) |
         grep -v ' insert_failed=0 drop=0 ' |
         awk '{ print $1, $5, $6 }' |
         cut -f 2- -d ':' |
@@ -32,4 +33,4 @@
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ infodir }}/firewall_conntrack_counter"
     regexp: "^{{ inventory_hostname }} "
-    state: "{{ (_result.stderr | length > 0) | ternary('absent', 'present') }}"
+    state: "{{ (_result.stderr | length > 0 or _result.rc > 0) | ternary('absent', 'present') }}"
