new: site-test-kernel.yaml

--- a/playbooks/test-kernel.yaml
+++ b/playbooks/test-kernel.yaml
@@ -6,5 +6,4 @@
     - role: setup_common
     - role: setup_kernel
     - role: info_healthy
-    - role: shutdown
-    - role: snapshot
+    - role: delete
