reduce forks from 96 to 32

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,8 +3,8 @@ interpreter_python = /usr/bin/python3
 
 inventory = ./inventory
 
-# 6 forks per vCPU
-forks = 96
+# 8 physical cores
+forks = 32
 pipelining = true
 strategy = ansible.builtin.free
 
