--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -57,10 +57,10 @@
       mode: "0644"
   block:
     - name: Run a custom command
-      when: custom_command_file | length > 0
       ansible.builtin.import_tasks: custom-command.yaml
       tags:
         - custom-command
+        - never
 
     - name: Base
       ansible.builtin.import_tasks: base.yaml
