do not pin interpreter

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,10 @@
 [defaults]
-interpreter_python = /usr/bin/python3
-
 inventory = ./inventory
 
 # 8 physical cores
 forks = 32
 pipelining = true
-strategy = ansible.builtin.free
+strategy = free
 
 gathering = smart
 inject_facts_as_vars = false
