harden reboot cmd

--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -41,11 +41,10 @@
 
 - name: Reboot
   listen: Reboot
-  retries: 1
   ansible.builtin.reboot:
     reboot_timeout: 180
     post_reboot_delay: 30
-    test_command: "iptables -nvL"
+    reboot_command: systemctl reboot
 
 - name: Gather facts (after common reboot)
   listen: Reboot
