--- a/playbooks/roles/setup_common/tasks/reboot.yaml
+++ b/playbooks/roles/setup_common/tasks/reboot.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Check if reboot is required
+- name: Check for reboot-required
   changed_when: _reboot_required.stat.exists
   ansible.builtin.stat:
     path: /var/run/reboot-required
@@ -25,6 +25,3 @@
         grep 'NEEDRESTART-SVC:'
   register: _service_reboot_needed
   notify: Reboot
-
-- name: Flush handlers (reboot)
-  ansible.builtin.meta: flush_handlers
