custom command: allow it be part of a regular run

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -58,10 +58,10 @@
       mode: "0644"
   block:
     - name: Run a custom command
+      when: custom_command_file != ''
       ansible.builtin.import_tasks: custom-command.yaml
       tags:
         - custom-command
-        - never
 
     - name: Base
       ansible.builtin.import_tasks: base.yaml
