--- a/playbooks/roles/delete/tasks/delete.yaml
+++ b/playbooks/roles/delete/tasks/delete.yaml
@@ -13,7 +13,7 @@
       hcloud --quiet --poll-interval 5s server delete {{ inventory_hostname }}
   register: _hcloud
 
-- name: SSH key
+- name: SSHd known key
   delegate_to: localhost
   throttle: 1
   changed_when: _result.stdout is not search('not found in')
