--- a/playbooks/roles/info_healthy/tasks/_kconfig.yaml
+++ b/playbooks/roles/info_healthy/tasks/_kconfig.yaml
@@ -8,7 +8,7 @@
   throttle: "{{ concurrent_local_jobs }}"
   ansible.builtin.fetch:
     src: "/boot/config-{{ ansible_facts.kernel }}"
-    dest: "{{ infodir }}/kconfig/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}.kconfig.txt"
+    dest: "{{ infodir }}/kconfig/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}Z.kconfig.txt"
 
 - name: File kconfig info
   delegate_to: localhost
@@ -20,4 +20,4 @@
       {{ ansible_facts.architecture }}
       {{ ansible_facts.processor[1] }}
 
-    dest: "{{ infodir }}/kconfig/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}.info.txt"
+    dest: "{{ infodir }}/kconfig/{{ inventory_hostname }}.{{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}Z.info.txt"
