--- a/playbooks/roles/info_healthy/tasks/_trace.yaml
+++ b/playbooks/roles/info_healthy/tasks/_trace.yaml
@@ -24,7 +24,7 @@
       throttle: 1
       ansible.builtin.blockinfile:
         block: |
-          # {{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}    {{ ansible_facts.lsb.description }}
+          # {{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}Z    {{ ansible_facts.lsb.description }}
           {{ _full.stdout }}
         path: "{{ infodir }}/trace/{{ inventory_hostname }}.txt"
         marker: "# {mark} {{ item }} "
