common: reboot immediately

--- a/playbooks/roles/setup_common/handlers/main.yaml
+++ b/playbooks/roles/setup_common/handlers/main.yaml
@@ -45,7 +45,7 @@
     reboot_timeout: 180
     reboot_command: systemctl reboot
 
-- name: Gather facts (after common reboot)
+- name: Gather facts (last handler)
   listen: Reboot
   ansible.builtin.setup:
     gather_subset:
