fix gather_subset for setup:

--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -2,6 +2,8 @@
 - name: Gather facts - IPv6
   ansible.builtin.setup:
     gather_subset:
+      - "!all"
+      - "!min"
       - default_ipv6
 
 - name: Ensure IPv6 address has valid prefix
@@ -69,4 +71,6 @@
     - name: Gather facts - IPv6
       ansible.builtin.setup:
         gather_subset:
+          - "!all"
+          - "!min"
           - default_ipv6
