--- a/playbooks/roles/info_common/tasks/uname.yaml
+++ b/playbooks/roles/info_common/tasks/uname.yaml
@@ -2,6 +2,8 @@
 - name: Gather facts
   ansible.builtin.setup:
     gather_subset:
+      - "!all"
+      - "!min"
       - distribution
       - kernel
 
