--- a/playbooks/roles/info_healthy/tasks/_kconfig.yaml
+++ b/playbooks/roles/info_healthy/tasks/_kconfig.yaml
@@ -2,6 +2,8 @@
 - name: Gather facts - kconfig
   ansible.builtin.setup:
     gather_subset:
+      - "!all"
+      - "!min"
       - distribution
 
 - name: Fetch kconfig
