--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,16 +1,20 @@
 [defaults]
 inventory = ./inventory
 
-# 8 physical cores
+# needed e.g. for Debian release upgrade
+interpreter_python = /usr/bin/python3
+
+# limited rather by upstream bandwidth than by amount of cores
 forks = 32
 pipelining = true
 strategy = free
 
-gathering = smart
-inject_facts_as_vars = false
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
+gathering = smart
+inject_facts_as_vars = false
 
+# avoid putting become to every task
 remote_user = root
 
 # overwrite: ANSIBLE_DISPLAY_OK_HOSTS=true
