minor tweaks for gather facts

--- a/playbooks/roles/info_healthy/tasks/_kconfig.yaml
+++ b/playbooks/roles/info_healthy/tasks/_kconfig.yaml
@@ -5,6 +5,7 @@
       - "!all"
       - "!min"
       - distribution
+      - kernel
 
 - name: Fetch kconfig
   throttle: "{{ concurrent_local_jobs }}"
