--- a/playbooks/roles/setup_tor/tasks/config.yaml
+++ b/playbooks/roles/setup_tor/tasks/config.yaml
@@ -56,4 +56,4 @@
   ansible.builtin.template:
     src: tor.override.conf.j2
     dest: /etc/systemd/system/tor@default.service.d/override.conf
-  notify: Reload systemd
+  notify: Restart Tor
