--- a/playbooks/roles/setup_common/tasks/firewall-tor.yaml
+++ b/playbooks/roles/setup_common/tasks/firewall-tor.yaml
@@ -9,7 +9,7 @@
   throttle: 16
   retries: 3
   ansible.builtin.get_url:
-    url: "https://github.com/toralf/torutils/raw/main/{{ item }}"
+    url: "https://github.com/toralf/torutils/raw/{{ torutils_git_version }}/{{ item }}"
     dest: "/root/{{ item }}"
   with_items:
     - ipv4-rules.sh
@@ -117,7 +117,7 @@
       throttle: 16
       retries: 3
       ansible.builtin.get_url:
-        url: "https://github.com/toralf/torutils/raw/main/{{ item }}"
+        url: "https://github.com/toralf/torutils/raw/{{ torutils_git_version }}/{{ item }}"
         dest: "/root/{{ item }}"
       with_items:
         - ipv4-rules-egress.sh
