64 works better for kernel builds

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,8 +4,8 @@ inventory = ./inventory
 # needed e.g. for Debian release upgrade
 interpreter_python = /usr/bin/python3
 
-# limited rather by upstream bandwidth than by amount of cores
-forks = 32
+# limited rather by upstream bandwidth than by cpu
+forks = 64
 pipelining = true
 strategy = free
 
