nginx: remove a check for being installed

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -174,10 +174,10 @@
       tags:
         - kernel-debian
 
-    - name: Force a reboot
+    - name: Reboot is forced
       changed_when: true
       ansible.builtin.debug:
-        msg: Reboot was triggered.
+        msg: Reboot is triggered.
       notify: Reboot
       tags:
         - never
