--- a/playbooks/roles/setup_common/tasks/nginx-config.yaml
+++ b/playbooks/roles/setup_common/tasks/nginx-config.yaml
@@ -1,28 +1,26 @@
 ---
-- name: Test for an Nginx installation
-  ansible.builtin.stat:
-    path: /etc/nginx/conf.d/
-  register: _nginx_is_installed
+- name: Create nginx site directories
+  ansible.builtin.file:
+    path: /var/www/{{ item.dir }}
+    state: directory
+    mode: "0755"
+  loop_control:
+    label: "{{ item.dir }}"
+  loop: "{{ nginx_site_directories }}"
 
-- name: Config
-  when: _nginx_is_installed.stat.exists
-  block:
-    - name: Create nginx site directories
-      ansible.builtin.file:
-        path: /var/www/{{ item.dir }}
-        state: directory
-        mode: "0755"
-      loop_control:
-        label: "{{ item.dir }}"
-      loop: "{{ nginx_site_directories }}"
+- name: Configure nginx
+  ansible.builtin.template:
+    src: nginx.conf.j2
+    dest: /etc/nginx/conf.d/tor-relays.conf
+  notify: Reload nginx
 
-    - name: Configure nginx
-      ansible.builtin.template:
-        src: nginx.conf.j2
-        dest: /etc/nginx/conf.d/tor-relays.conf
-      notify: Reload nginx
+- name: Verify nginx config
+  changed_when: false
+  ansible.builtin.command:
+    cmd: nginx -t
 
-    - name: Verify nginx config
-      changed_when: false # either config is ok or test fails
-      ansible.builtin.command:
-        cmd: nginx -t
+- name: Ensure nginx is started
+  ansible.builtin.systemd_service:
+    name: nginx
+    state: started
+    enabled: true
